<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.MainActivity"
    tools:showIn="@layout/activity_main">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="229dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:checkedButton="@+id/orderDefault"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/orderDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_label" />

        <RadioButton
            android:id="@+id/orderPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_label" />

        <RadioButton
            android:id="@+id/orderMarca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_label" />

    </RadioGroup>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvBicicletas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:listitem="@layout/item_bicicleta" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="Ordenar Por"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/rvBicicletas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>